# masters-of-science

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  build.sh  package.json  readme.md  tsconfig.json  webpack.config.js
src/polybench-rs/src/stencils/: jacobi_2d.rs
src/rust/: collection_copy.rs  lib.rs  log.rs  matrix_multiplication.rs
src/rust/polybench-rs/: Cargo.toml
src/rust/polybench-rs/src/: lib.rs
src/rust/polybench-rs/src/datamining/: covariance.rs
src/rust/polybench-rs/src/linear_algebra/blas/: syr2k.rs
src/rust/polybench-rs/src/linear_algebra/kernels/: _3mm.rs
src/rust/polybench-rs/src/linear_algebra/solvers/: ludcmp.rs
src/rust/polybench-rs/src/medley/: floyd_warshall.rs
src/rust/polybench-rs/src/stencils/: heat_3d.rs
src/rust/wasm-bench-tool/: Cargo.toml
src/rust/wasm-bench-tool/src/: benchmark.rs
src/typescript/: benchWorker.ts  benchmark.ts  firebase_analytics.ts  main.ts  matrix-multiplication.ts  performance-utils.ts
src/typescript/polybench/config/medley/: floyd-warshall.ts
src/typescript/polybench/datamining/: covariance.ts
src/typescript/polybench/linear_algebra/blas/: syr2k.ts
src/typescript/polybench/linear_algebra/kernels/: _3mm.ts
src/typescript/polybench/linear_algebra/solvers/: ludcmp.ts
src/typescript/polybench/stencils/: heat-3d.ts
src/typescript/specs/: matrix-multiplication.spec.ts
static/: index.html
