[package]
name = "wasm-bench-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.80"
web-sys = {version = "0.3.56", features = ["Window", "Performance", "PerformanceTiming"] }
js-sys = "0.3.57"